<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/confirmation"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_white" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <com.mxi.ecommerce.widget.MyTextviewSemibold
                android:id="@+id/et_email_id"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/please_confirmation" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/ok_btn"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cancel_btn"
                android:padding="10dp"
                android:text="@string/no"
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:textSize="15dp" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
