<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/login"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
            <!--*444*395#-->
            <!--

                    <View
                        android:background="@color/colorDark"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"/>
            -->


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:padding="10dp"
                android:text="@string/login_first"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/com_facebook_blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="00dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark">

                    <TextView
                        android:id="@+id/tv_yes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/yes"
                        android:textColor="@color/text_white" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="00dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark">

                    <TextView
                        android:id="@+id/tv_no"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/no"
                        android:textColor="@color/text_white" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>