<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_white"

        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:padding="10dp"
                android:src="@mipmap/leftbtn" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/dialog_title"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/tw__composer_white" />
            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/color_purple"
                android:orientation="horizontal">


            </LinearLayout>-->
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:isScrollContainer="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:text="@string/dialog_info"
                            android:textAlignment="center"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="0dp">

                            <EditText
                                android:id="@+id/etRegFname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_first_name"
                                android:inputType="textCapSentences"
                                android:maxLines="1"
                                android:textColorLink="@color/colorPrimary" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp">

                            <EditText
                                android:id="@+id/last_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_last_name"
                                android:inputType="textCapSentences"
                                android:maxLines="1"
                                android:textColorLink="@color/colorPrimary" />
                        </android.support.design.widget.TextInputLayout>



                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="1dp">

                                <EditText
                                    android:id="@+id/etRegPhone"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:digits="0123456789+"
                                    android:hint="@string/hint_mobile_number"
                                    android:imeOptions="actionDone"
                                    android:inputType="phone"
                                    android:maxLength="10"
                                    android:maxLines="1"
                                    android:textColorLink="@color/colorPrimary" />
                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp">

                            <EditText
                                android:id="@+id/etRegEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:editable="false"
                                android:hint="@string/hint_email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:textColorLink="@color/colorPrimary" />
                        </android.support.design.widget.TextInputLayout>



                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:gravity="center">

                <Button
                    android:id="@+id/btnNewRegister"
                    android:layout_width="270dp"
                    android:background="@color/btn_round_color"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/signup"
                    android:textColor="#fff"
                    android:textSize="22dp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>