<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_category_mainscreen"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="0dp"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="0.01dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15sp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/round_check" />

                <com.mxi.ecommerce.widget.MyTextviewBold
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15sp"
                    android:text="@string/order_placed"
                    android:textAlignment="center" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40sp"
                android:layout_marginRight="40sp"
                android:background="@color/button_color_grey" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.mxi.ecommerce.widget.MyTextviewExtraLight
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/del_date"
                    android:textAlignment="center" />

                <com.mxi.ecommerce.widget.MyTextviewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/today"
                    android:textAlignment="center" />


                <com.mxi.ecommerce.widget.MyTextviewBold
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15sp"
                    android:text=""
                    android:textAlignment="center" />


            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>